install and example

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,38 @@ knitr::opts_chunk$set(
 
 # The Tissot Indicatrix
 
+Can be installed with 
+
+```R
+devtools::install_github("mdsumner/tissot")
+```
+
+Minimal example
+
+```R
+ library(rgdal)
+ prj <- function(z, proj.in, proj.out) {
+   z.pt <- SpatialPoints(coords=matrix(z, ncol=2), proj4string=proj.in)
+   w.pt <- spTransform(z.pt, CRS=proj.out)
+   w.pt@coords[1, ]
+ }
+ # Longitude, latitude, and reprojection function
+ # NAD 27 in
+ # World Robinson projection out
+ r <- tissot(130, 54, prj,
+             proj.in=CRS("+init=epsg:4267"),
+             proj.out=CRS("+init=esri:54030"))
+
+ i <- indicatrix(r, scale=10^4, n=71)
+ plot(i$outline, type="n", asp=1, xlab="Easting", ylab="Northing")
+ polygon(i$base, col=rgb(0, 0, 0, .025), border="Gray")
+ lines(i$d.lambda, lwd=2, col="Gray", lty=2)
+ lines(i$d.phi, lwd=2, col=rgb(.25, .7, .25), lty=2)
+ lines(i$axis.major, lwd=2, col=rgb(.25, .25, .7))
+ lines(i$axis.minor, lwd=2, col=rgb(.7, .25, .25))
+ lines(i$outline, asp=1, lwd=2)
+```
+
 Derived from 
 
 http://gis.stackexchange.com/questions/31651/an-example-tissot-ellipse-for-an-equirectangular-projection
