--- a/README.Rmd
+++ b/README.Rmd
@@ -10,7 +10,7 @@ output:
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "README-"
+  fig.path = "readmefigs/README-"
 )
 ```
 
@@ -22,9 +22,15 @@ Can be installed with
 devtools::install_github("mdsumner/tissot")
 ```
 
+```{r,echo=FALSE,message=FALSE}
+library(rgdal)
+```
+
+
 Minimal example
 
-```R
+```{r}
+library(tissot)
  library(rgdal)
  prj <- function(z, proj.in, proj.out) {
    z.pt <- SpatialPoints(coords=matrix(z, ncol=2), proj4string=proj.in)
@@ -52,3 +58,40 @@ Derived from
 
 http://gis.stackexchange.com/questions/31651/an-example-tissot-ellipse-for-an-equirectangular-projection
 
+# Polar example
+
+```{r}
+ library(tissot)
+library(rgdal)
+library(maptools)
+data(wrld_simpl)
+prj <- function(z, proj.in, proj.out) {
+  z.pt <- SpatialPoints(coords=matrix(z, ncol=2), proj4string=proj.in)
+  w.pt <- spTransform(z.pt, CRS=proj.out)
+  w.pt@coords[1, ]
+}
+
+
+
+## choose a projection
+ptarget <- "+proj=stere +lat_ts-71 +lat_0=-90 +ellps=WGS84"
+w <- spTransform(subset(wrld_simpl, coordinates(wrld_simpl)[,2] < 0), CRS(ptarget))
+
+## grid of points
+library(raster)
+gr <- rasterToPoints(raster(w, nrow = 7, ncol = 7), spatial = TRUE)
+grll <- spTransform(gr, CRS(projection(wrld_simpl)))
+tis <- vector("list", length(gr))
+for (i in seq_along(tis)) tis[[i]] <- tissot(coordinates(grll)[i, 1], coordinates(grll)[i, 2], prj,  proj.in = CRS(projection(wrld_simpl)), proj.out = projection(w))
+plot(w)
+for (j in seq_along(tis)) {
+  i <- indicatrix(tis[[j]], scale = 3e5, n = 71)
+  polygon(i$base, col=rgb(0, 0, 0, .025), border="Gray")
+  lines(i$d.lambda, lwd=2, col="Gray", lty=2)
+  lines(i$d.phi, lwd=2, col=rgb(.25, .7, .25), lty=2)
+  lines(i$axis.major, lwd=2, col=rgb(.25, .25, .7))
+  lines(i$axis.minor, lwd=2, col=rgb(.7, .25, .25))
+  lines(i$outline, asp=1, lwd=1)
+  
+}
+```
