compare stere with laea in readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -70,22 +70,18 @@ prj <- function(z, proj.in, proj.out) {
   w.pt <- spTransform(z.pt, CRS=proj.out)
   w.pt@coords[1, ]
 }
-
-
-
-## choose a projection
-ptarget <- "+proj=stere +lat_ts-71 +lat_0=-90 +ellps=WGS84"
-w <- spTransform(subset(wrld_simpl, coordinates(wrld_simpl)[,2] < 0), CRS(ptarget))
-
-## grid of points
 library(raster)
-gr <- rasterToPoints(raster(w, nrow = 7, ncol = 7), spatial = TRUE)
-grll <- spTransform(gr, CRS(projection(wrld_simpl)))
-tis <- vector("list", length(gr))
-for (i in seq_along(tis)) tis[[i]] <- tissot(coordinates(grll)[i, 1], coordinates(grll)[i, 2], prj,  proj.in = CRS(projection(wrld_simpl)), proj.out = projection(w))
-plot(w)
+
+buildandplot <- function(data, title = "") {
+  ## grid of points
+  gr <- rasterToPoints(raster(data, nrow = 7, ncol = 7), spatial = TRUE)
+  grll <- spTransform(gr, CRS(projection(wrld_simpl)))
+  tis <- vector("list", length(gr))
+  for (i in seq_along(tis)) tis[[i]] <- tissot(coordinates(grll)[i, 1], coordinates(grll)[i, 2], prj,  
+                                               proj.in = CRS(projection(wrld_simpl)), proj.out = projection(data))
+plot(data, main = title)
 for (j in seq_along(tis)) {
-  i <- indicatrix(tis[[j]], scale = 3e5, n = 71)
+  i <- indicatrix(tis[[j]], scale = 5e5, n = 71)
   polygon(i$base, col=rgb(0, 0, 0, .025), border="Gray")
   lines(i$d.lambda, lwd=2, col="Gray", lty=2)
   lines(i$d.phi, lwd=2, col=rgb(.25, .7, .25), lty=2)
@@ -94,4 +90,17 @@ for (j in seq_along(tis)) {
   lines(i$outline, asp=1, lwd=1)
   
 }
+invisible(NULL)
+}
+## choose a projection
+ptarget1 <- "+proj=stere +lat_ts-71 +lat_0=-90 +ellps=WGS84"
+w1 <- spTransform(subset(wrld_simpl, coordinates(wrld_simpl)[,2] < 10), CRS(ptarget1))
+
+ptarget2 <- "+proj=laea +lat_0=-90 +ellps=WGS84"
+w2 <- spTransform(subset(wrld_simpl, coordinates(wrld_simpl)[,2] < 10), CRS(ptarget2))
+
+buildandplot(w1, "Polar Stereographic")
+buildandplot(w2, "Lambert Azimuthal Equal Area")
+
+
 ```
