--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,14 @@ knitr::opts_chunk$set(
 
 # The Tissot Indicatrix
 
+NOTE: this package is in early development and will change a lot, this is just a quick prototype and needs quite a bit more to be useful.
+
+## TODO
+ * sort out the interface for inputting data, projections
+ * semi-automate the scaling for the plot
+ 
+ 
+# Installation
 Can be installed with 
 
 ```R
@@ -27,7 +35,7 @@ library(rgdal)
 ```
 
 
-Minimal example
+# Minimal example
 
 ```{r}
 library(tissot)
