--- a/README.Rmd
+++ b/README.Rmd
@@ -80,7 +80,7 @@ prj <- function(z, proj.in, proj.out) {
 }
 library(raster)
 
-buildandplot <- function(data, title = "") {
+buildandplot <- function(data, title = "", scale = 5e5) {
   ## grid of points
   gr <- rasterToPoints(raster(data, nrow = 7, ncol = 7), spatial = TRUE)
   grll <- spTransform(gr, CRS(projection(wrld_simpl)))
@@ -89,7 +89,7 @@ buildandplot <- function(data, title = "") {
                                                proj.in = CRS(projection(wrld_simpl)), proj.out = projection(data))
 plot(data, main = title)
 for (j in seq_along(tis)) {
-  i <- indicatrix(tis[[j]], scale = 5e5, n = 71)
+  i <- indicatrix(tis[[j]], scale = scale, n = 71)
   polygon(i$base, col=rgb(0, 0, 0, .025), border="Gray")
   lines(i$d.lambda, lwd=2, col="Gray", lty=2)
   lines(i$d.phi, lwd=2, col=rgb(.25, .7, .25), lty=2)
@@ -101,14 +101,18 @@ for (j in seq_along(tis)) {
 invisible(NULL)
 }
 ## choose a projection
-ptarget1 <- "+proj=stere +lat_ts-71 +lat_0=-90 +ellps=WGS84"
+ptarget1 <- "+proj=stere +lon_0=147 +lat_ts-71 +lat_0=-90 +ellps=WGS84"
 w1 <- spTransform(subset(wrld_simpl, coordinates(wrld_simpl)[,2] < 10), CRS(ptarget1))
 
-ptarget2 <- "+proj=laea +lat_0=-90 +ellps=WGS84"
+ptarget2 <- "+proj=laea +lon_0=147 +lat_0=-90 +ellps=WGS84"
 w2 <- spTransform(subset(wrld_simpl, coordinates(wrld_simpl)[,2] < 10), CRS(ptarget2))
+
+ptarget3 <- "+proj=omerc +lonc=147 +gamma=9 +alpha=9 +lat_0=-80 +ellps=WGS84"
+w3 <- spTransform(subset(wrld_simpl, coordinates(wrld_simpl)[,2] < -12), CRS(ptarget3), scale = 3e5)
 
 buildandplot(w1, "Polar Stereographic")
 buildandplot(w2, "Lambert Azimuthal Equal Area")
+buildandplot(w3, "Oblique Mercator")
 
 
 ```
