--- a/README.Rmd
+++ b/README.Rmd
@@ -1,3 +1,7 @@
+[![Travis-CI Build Status](https://travis-ci.org/mdsumner/tissot.svg?branch=master)](https://travis-ci.org/mdsumner/tissot)
+[![](http://www.r-pkg.org/badges/version/tissot)](http://www.r-pkg.org/pkg/tissot)
+[![](http://cranlogs.r-pkg.org/badges/tissot)](http://www.r-pkg.org/pkg/tissot)
+
 ---
 output:
   md_document:
