UTM and LCC local

--- a/README.Rmd
+++ b/README.Rmd
@@ -78,7 +78,7 @@ http://gis.stackexchange.com/questions/31651/an-example-tissot-ellipse-for-an-eq
 # Polar example
 
 ```{r}
- library(tissot)
+library(tissot)
 library(rgdal)
 library(maptools)
 data(wrld_simpl)
@@ -89,14 +89,14 @@ prj <- function(z, proj.in, proj.out) {
 }
 library(raster)
 
-buildandplot <- function(data, title = "", scale = 5e5) {
+buildandplot <- function(data, scale = 5e5, ...) {
   ## grid of points
   gr <- rasterToPoints(raster(data, nrow = 7, ncol = 7), spatial = TRUE)
   grll <- spTransform(gr, CRS(projection(wrld_simpl)))
   tis <- vector("list", length(gr))
   for (i in seq_along(tis)) tis[[i]] <- tissot(coordinates(grll)[i, 1], coordinates(grll)[i, 2], prj,  
                                                proj.in = CRS(projection(wrld_simpl)), proj.out = projection(data))
-plot(data, main = title)
+plot(data,  ...)
 for (j in seq_along(tis)) {
   i <- indicatrix(tis[[j]], scale = scale, n = 71)
   polygon(i$base, col=rgb(0, 0, 0, .025), border="Gray")
@@ -120,9 +120,9 @@ ptarget3 <- "+proj=omerc +lonc=147 +gamma=9 +alpha=9 +lat_0=-80 +ellps=WGS84"
 w3 <- spTransform(subset(wrld_simpl, coordinates(wrld_simpl)[,2] < -12), CRS(ptarget3), scale = 3e5)
 
 
-buildandplot(w1, "Polar Stereographic")
-buildandplot(w2, "Lambert Azimuthal Equal Area")
-buildandplot(w3, "Oblique Mercator")
+buildandplot(w1, main = "Polar Stereographic")
+buildandplot(w2, main = "Lambert Azimuthal Equal Area")
+buildandplot(w3, main = "Oblique Mercator")
 
 
 ```
@@ -133,6 +133,22 @@ buildandplot(w3, "Oblique Mercator")
 library(raster)
 ptarget4 <- "+proj=merc +ellps=WGS84"
 w4 <- spTransform(raster::intersect(disaggregate(wrld_simpl), as(extent(-180, 180, -85, 90), "SpatialPolygons")), ptarget4)
-buildandplot(w4, "Mercator")
+buildandplot(w4, main = "Mercator")
+
+ptarget5 <- "+proj=lcc +ellps=WGS84 +lon_0=134 +lat_0=-30 +lat_1=-50 +lat_2=-20"
+w5 <- spTransform(raster::intersect(disaggregate(wrld_simpl), as(extent(80, 180, -65, -10), "SpatialPolygons")), ptarget5)
+buildandplot(w5, main = "Lambert Conformal Conic", scale = 3.5e5)
+
+
+ptarget6 <- "+proj=utm +zone=50 +south +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs "
+
+w6 <- spTransform(raster::intersect(disaggregate(wrld_simpl), as(extent(80, 160, -65, -10), "SpatialPolygons")), ptarget6)
+buildandplot(w6, main = "UTM South Zone 50 ", col = "grey", scale = 2.5e5)
+
+
+
+buildandplot(wrld_simpl, main = "Longitude / Latitude")
+degAxis(1)
+degAxis(2)
 
 ```
