--- a/README.Rmd
+++ b/README.Rmd
@@ -6,7 +6,6 @@ editor_options:
   chunk_output_type: console
 ---
 
-[![Travis-CI Build Status](https://travis-ci.org/mdsumner/tissot.svg?branch=master)](https://travis-ci.org/mdsumner/tissot)
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
@@ -43,7 +42,7 @@ NOTE: I am not the primary author of this great code only the package creator, p
 Can be installed with 
 
 ```R
-devtools::install_github("mdsumner/tissot")
+remotes::install_github("hypertidy/tissot")
 ```
 
 # Minimal example
