--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ editor_options:
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "readmefigs/README-", 
+  fig.path = "man/readmefigs/README-", 
         fig.height = 9, 
        fig.width = 9
 )
@@ -57,9 +57,11 @@ library(tissot)
 r <- tissot(130, 54,
            proj.in= "EPSG:4267",  
            proj.out= "ESRI:54030")
-i <- indicatrix(r, scale=10^4, n=71)
-plot(i)
-
+i0 <- indicatrix(r, scale=10^4, n=71)
+plot(i0)
+tissot_map(add = FALSE)
+i1 <- indicatrix(r, scale=10^6, n=71)
+plot(i1, add = T)
 ```
 
 
@@ -67,18 +69,20 @@ Since an original port of whuber's code we have now made it much easier to creat
 
 
 ```{r bigger-example}
-x <- seq(-175, 175, by = 20)
+x <- seq(-172.5, 172.5, by = 15)
 y <- seq(-82.5, 82.5, by = 15)
 xy <- expand.grid(x, y)
 r <- tissot(xy,
             proj.in= "OGC:CRS84",
             proj.out= "+proj=robin")
 
-i <- indicatrix0(r[1, ], scale=10^4, n=71)
+i <- indicatrix0(r[1, ], scale= 1e4, n=71)
 plot(i, add = FALSE)
 
-ii <- indicatrix(r, scale=3e5, n=71)
-plot(ii, add = FALSE)
+ii <- indicatrix(r, scale=4e5, n=71)
+tissot_map(add = FALSE)
+plot(ii, add = TRUE)
+
 ```
 
 Mollweide. 
@@ -89,20 +93,46 @@ m <- tissot(xy,
             proj.out= "+proj=moll")
 
 
-plot(indicatrix(m, scale=3e5, n=71), add = FALSE)
+plot(indicatrix(m, scale=4e5, n=71), add = FALSE)
+tissot_map()
 ```
 
 
-Eckhert I
+Eckhert III
 
 ```{r eckhert}
 e <- tissot(xy,
             proj.in= "OGC:CRS84",
-            proj.out= "+proj=eck1")
+            proj.out= "+proj=eck3")
 
 
-plot(indicatrix(e, scale=3e5, n=71), add = FALSE)
+plot(indicatrix(e, scale=4e5, n=71), add = FALSE)
 ```
+
+Equidistant 
+
+```{r aeqd}
+aeqd <- tissot(xy,
+            proj.in= "OGC:CRS84",
+            proj.out= "+proj=aeqd")
+
+
+plot(indicatrix(aeqd, scale=4e5, n=71), add = FALSE)
+```
+
+Cassini-Soldner (spherical because ellipsoidal seems broken)
+
+```{r xx}
+xx <- tissot(xy,
+            proj.in= "OGC:CRS84",
+            proj.out= "+proj=cass +R=6378137")
+
+
+plot(indicatrix(xx, scale=4e5, n=71), add = FALSE)
+points(tissot_map(col = "transparent"), pch = ".")
+
+```
+
 
 Sinusoidal
 
@@ -113,6 +143,8 @@ s <- tissot(xy,
 
 
 plot(indicatrix(s, scale=3e5, n=71), add = FALSE)
+tissot_map()
+
 ```
 
 
@@ -126,6 +158,8 @@ p <- tissot(xy[xy[,2] < -40, ],
             proj.out= "+proj=stere +lon_0=147 +lat_ts-71 +lat_0=-90 +datum=WGS84")
 
 plot(indicatrix(p, scale = 3e5))
+tissot_map()
+
 ```
 
 ```{r polar-laea}
@@ -134,6 +168,7 @@ laea <- tissot(xy[xy[,2] < 20, ],
             proj.out= "+proj=laea +lon_0=147 +lat_0=-90 +datum=WGS84")
 
 plot(indicatrix(laea, scale = 3e5))
+
 ```
 
 
@@ -145,7 +180,7 @@ You get the idea ... many projections need extra attention for real data.
 ```{r omerc}
 mp0 <- do.call(cbind, maps::map(plot = FALSE)[1:2])
 omerc <- "+proj=omerc +lonc=147 +gamma=9 +alpha=9 +lat_0=-80 +ellps=WGS84"
-mp <- tissot:::.prj(mp0, proj.out = omerc, proj.in = "OGC:CRS84")
+mp <- tissot:::.prj(mp0, omerc, proj.in = "OGC:CRS84")
 o <- tissot(xy,
             proj.in= "OGC:CRS84",
             proj.out= omerc)
@@ -161,8 +196,7 @@ VicGrid
 ```{r vicgrid}
 
 vgrid <- "+proj=lcc +lat_1=-36 +lat_2=-38 +lat_0=-37 +lon_0=145 +x_0=2500000 +y_0=2500000 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs"
-mp <- tissot:::.prj(mp0, 
-                    proj.out = vgrid, proj.in = "OGC:CRS84")
+mp <- tissot:::.prj(mp0, vgrid, proj.in = "OGC:CRS84")
 v <- tissot(as.matrix(expand.grid(seq(120, 165, by =5 ), 
                                           seq(-45, -35, by = 5))),
             proj.in= "OGC:CRS84",
@@ -178,8 +212,7 @@ UTM Zone 54 (Hobart)
 ```{r utm54}
 
 utm <- "+proj=utm +zone=54 +south"
-mp <- tissot:::.prj(mp0, 
-                    proj.out = utm, proj.in = "OGC:CRS84")
+mp <- tissot:::.prj(mp0, utm, proj.in = "OGC:CRS84")
 u <- tissot(as.matrix(expand.grid(seq(108, 162, by =6 ), 
                                           seq(-65, 55, by = 15))),
             proj.in= "OGC:CRS84",
