--- a/README.Rmd
+++ b/README.Rmd
@@ -64,7 +64,7 @@ Build indicatrix ellipses and plot them over a map:
 
 ```{r robinson}
 ii <- indicatrix(r)
-plot(ii, scale = 6e5, add = FALSE)
+plot(ii, scale = 6e5, add = FALSE, show.circle = TRUE, show.axes = TRUE)
 tissot_map()
 ```
 
